--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 astroid==3.0.1
 attrs==23.1.0
 backoff==2.2.1
+beautifulsoup4==4.12.2
 blinker==1.7.0
 branca==0.7.0
+bs4==0.0.1
 build==1.0.3
 certifi==2023.7.22
 charset-normalizer==3.3.2
@@ -47,6 +49,7 @@ requests==2.31.0
 rpds-py==0.13.1
 setuptools==69.0.1
 six==1.16.0
+soupsieve==2.5
 SQLAlchemy==2.0.23
 toml==0.10.2
 tomlkit==0.12.2
